--- a/style.css
+++ b/style.css
@@ -65,6 +65,25 @@ footer .footer {
     display: block;
   }
 }
+.centerbtn {
+  display: none;
+  margin-top: 0;
+}
+.hideornot {
+  margin-top: 0;
+  display: block;
+}
+@media (max-width: 740px) {
+  .hideornot {
+    display: none;
+    margin-top: 0;
+  }
+  .centerbtn {
+    margin-top: 0;
+    margin-bottom: 2rem;
+    display: flex;
+  }
+}
 .latestcontainer .container .imgContainer img {
   width: 100%;
   height: 250px;
