--- a/style.css
+++ b/style.css
@@ -122,6 +122,8 @@ main {
   display: flex;
   margin-bottom: 2rem;
   flex-direction: column;
+  margin-right: 1.6rem;
+  margin-left: 1.6rem;
   gap: 25px;
 }
 .category .recipe {
