--- a/style.css
+++ b/style.css
@@ -109,6 +109,13 @@ footer .footer {
 main {
   margin-top: 2rem;
 }
+a {
+  color: white;
+  text-decoration: none;
+}
+a:hover {
+  color: crimson;
+}
 .category {
   display: flex;
   margin-top: 2rem;
